[package]
name = "bytefly"
description = "Small, lightweight serialization wrapper around the byteorder crate."
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["serialization", "stream", "parsing", "bytes", "encoding"]
categories = ["encoding", "parsing"]
repository = "https://github.com/NiklasVd/bytefly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"